Inserted the images and set them to the pages

--- a/inicio.html
+++ b/inicio.html
@@ -41,9 +41,9 @@
         </div>
         <div id="fotos">
           <!-- espaço para imagens -->
-          <img src="" alt="Foto" class="imgIn" />
-          <img src="" alt="Foto" class="imgIn" />
-          <img src="" alt="Foto" class="imgIn" />
+          <img src="assets/images/Redmn.jpg" alt="Foto" class="imgIn" id="pic1" />
+          <img src="assets/images/j515.png" alt="j515" class="imgIn" id="pic2" />
+          <img src="assets/images/me_Profile.png" alt="Foto" class="imgIn" id="pic3" />
         </div>
       </main>
 
@@ -61,7 +61,9 @@
 
             <!-- Detalhes do item -->
             <span class="itembox">
-              <img src="" alt="" class="imgGallery" />
+              <a href="https://music.youtube.com/playlist?list=PLsWsK4XD6GgaXoqCKgcy3Xc1OLDboW8rb&feature=share" target="_blank">
+                <img src="assets/images/in-my-feelings-ytmusic.png" title="In My Feelings… (YouTube Music Playlist)" alt="In My Feelings (YouTube Music Playlist)" class="imgGallery" />
+              </a>
               <div class="text2">
                 <h4 class="hobbie-title">
                   In My Feelings… (YouTube Music Playlist)
@@ -79,7 +81,9 @@
 
             <!-- Detalhes do item -->
             <span class="itembox">
-              <img src="" alt="" class="imgGallery" />
+              <a href="https://music.youtube.com/playlist?list=PLsWsK4XD6GgZuPIYNrO1phfYYaZf0N-u7&feature=share" target="_blank">
+                <img src="assets/images/uns-kpop-legal-ytmusic.png" title="Uns KPOP Legal (YouTube Music Playlist)" alt="Uns KPOP Legal (YouTube Music Playlist)" class="imgGallery" />
+              </a>
               <div class="text2">
                 <h4 class="hobbie-title">
                   Uns KPOP Legal (YouTube Music Playlist)
@@ -89,16 +93,17 @@
                   músicas que eu acho muito interessante do gênero. Tem umas
                   músicas bem animadas aí, então já prepara a pista de dança!
                   <br />
-                  <a href="#"> Clique aqui para acessar. </a>
+                  <a href="https://music.youtube.com/playlist?list=PLsWsK4XD6GgZuPIYNrO1phfYYaZf0N-u7&feature=share" target="_blank"> Clique aqui para acessar. </a>
                 </p>
-              </div>
-              <!-- texto do item-->
+              </div> <!-- texto do item-->
             </span>
             <!-- Fechamento do item-->
 
             <!-- Detalhes do item -->
             <span class="itembox">
-              <img src="" alt="" class="imgGallery" />
+              <a href="https://music.youtube.com/playlist?list=PLsWsK4XD6GgbqkSE-vb3UKS_xveMUU8Wi&feature=share" target="_blank">
+                <img src="assets/images/um-eu-aleatorio-ytmusic.png" title="Um Eu Aleatório (YouTube Music Playlist" alt="Um Eu Aleatório (YouTube Music Playlist" class="imgGallery" />
+              </a>
               <div class="text2">
                 <h4 class="hobbie-title">
                   Um Eu Aleatório (YouTube Music Playlist)
@@ -107,7 +112,7 @@
                   Essa aqui tem diversas músicas que eu curto no geral. Pode ser
                   que seja meio misturada, mas ouvi dizer que eclético é bom!
                   <br />
-                  <a href=""> Clique aqui para acessar. </a>
+                  <a href="https://music.youtube.com/playlist?list=PLsWsK4XD6GgbqkSE-vb3UKS_xveMUU8Wi&feature=share" target="_blank"> Clique aqui para acessar. </a>
                 </p>
               </div>
               <!-- texto do item-->
@@ -116,7 +121,9 @@
 
             <!-- Detalhes do item -->
             <span class="itembox">
-              <img src="" alt="" class="imgGallery" />
+              <a href="https://www.bandlab.com/jhonny515" target="_blank">
+                <img src="assets/images/bandlab-profile.png" title="Jhonny 515 em BandLab" alt="Jhonny 515 em BandLab" class="imgGallery" />
+              </a>
               <div class="text2">
                 <h4 class="hobbie-title">BandLab</h4>
                 <p>
@@ -124,7 +131,7 @@
                   que eu faço. O BandLab é um aplicativo para composição de
                   músicas com ferramenta social para o compartilhamento das
                   mesmas. Lá, pode ou não ter algumas músicas minhas.. <br />
-                  Enfim, <a href=""> clique aqui para acessar. </a>
+                  Enfim, <a href="https://www.bandlab.com/jhonny515" target="_blank"> clique aqui para acessar. </a>
                 </p>
               </div>
               <!--  texto do item -->
@@ -144,7 +151,12 @@
 
             <!-- Detalhes do item -->
             <span class="itembox">
-              <img src="" alt="" class="imgGallery" />
+              <div class="imgGallery">
+                <img src="assets/images/Gatos-nao-sabem-dancar-poster.jpg" title="Gatos Não Sabem Dançar - Poster (Fonte: AdoroCinema)" alt="Gatos Não Sabem Dançar - Poster (Fonte: AdoroCinema)" />
+                <div class="citeFonte">
+                  Fonte da Imagem: <a href="https://www.adorocinema.com/filmes/filme-32024/fotos/detalhe/?cmediafile=21959723" target="_blank">AdoroCinema</a>.
+                </div>
+              </div>
               <div class="text2">
                 <h4 class="hobbie-title">Gatos Não Sabem Dançar (1997)</h4>
                 <p>
@@ -153,7 +165,7 @@
                   Hollywood em busca de chegar ao estrelato. Chegando lá, ele vê
                   que esse não será um sonho fácil de se realizar, especialmente
                   se depender de uma mimada artista mirim. <br />
-                  <a href=""> Veja mais sobre o filme aqui. </a>
+                  <a href="https://g.co/kgs/BhGzrB" target="_blank"> Veja mais sobre o filme aqui. </a>
                 </p>
               </div>
               <!-- texto do item-->
@@ -162,7 +174,12 @@
 
             <!-- Detalhes do item -->
             <span class="itembox">
-              <img src="" alt="" class="imgGallery" />
+              <div class="imgGallery">
+                <img src="assets/images/divertida-mente-poster.jpg" title="Divertida Mente - Poster (Fonte: AdoroCinema)" alt="Divertida Mente - Poster (Fonte: AdoroCinema)" />
+                <div class="citeFonte">
+                  Fonte da Imagem: <a href="https://www.adorocinema.com/filmes/filme-196960/fotos/detalhe/?cmediafile=21207909" target="_blank">AdoroCinema</a>.
+                </div>
+              </div>
               <div class="text2">
                 <h4 class="hobbie-title">Divertida Mente (2015)</h4>
                 <p>
@@ -175,7 +192,7 @@
                   assunto muito importante, que é a saúde mental, especialmente
                   na fase da adolescência, onde os sentimentos podem estar
                   confusos. <br />
-                  <a href=""> Veja mais aqui. </a>
+                  <a href="https://g.co/kgs/FYNh8k" target="_blank"> Veja mais aqui. </a>
                 </p>
               </div>
               <!--  texto do item -->
@@ -184,7 +201,12 @@
 
             <!-- Detalhes do item -->
             <span class="itembox">
-              <img src="" alt="" class="imgGallery" />
+              <div class="imgGallery">
+                <img src="assets/images/doctor-who-poster.jpg" title="Doctor Who - Poster (Fonte: AdoroCinema)" alt="Divertida Mente - Poster (Fonte: AdoroCinema)" />
+                <div class="citeFonte">
+                  Fonte da Imagem: <a href="https://www.adorocinema.com/series/serie-575/foto-detalhada/?cmediafile=21683613" target="_blank">AdoroCinema</a>.
+                </div>
+              </div>
               <div class="text2">
                 <h4 class="hobbie-title">Doctor Who</h4>
                 <p>
@@ -194,7 +216,7 @@
                   máquina do tempo: a TARDIS. Ao lado de seus acompanhantes,
                   exploramos universos e eras, enquanto também o Doutor tenta
                   deixar a linha do tempo e o universo intactos. <br />
-                  <a href=""> Veja mais sobre a série aqui. </a>
+                  <a href="https://g.co/kgs/Xwdo5e" target="_blank"> Veja mais sobre a série aqui. </a>
                 </p>
               </div>
               <!-- texto do item-->
@@ -203,7 +225,12 @@
 
             <!-- Detalhes do item -->
             <span class="itembox">
-              <img src="" alt="" class="imgGallery" />
+              <div class="imgGallery">
+                <img src="assets/images/the-rain-poster.jpg" title="The Rain - Poster (Fonte: AdoroCinema)" alt="The Rain - Poster (Fonte: AdoroCinema)" />
+                <div class="citeFonte">
+                  Fonte da Imagem: <a href="https://www.adorocinema.com/series/serie-22314/foto-detalhada/?cmediafile=21707688" target="_blank">AdoroCinema</a>.
+                </div>
+              </div>
               <div class="text2">
                 <h4 class="hobbie-title">The Rain</h4>
                 <p>
@@ -214,7 +241,7 @@
                   isolamento, se protegendo dos efeitos da chuva, os irmãos
                   precisam sair e encarar esse mundo se quiserem continuar
                   vivos. <br />
-                  <a href=""> Veja mais sobre a série aqui. </a>
+                  <a href="https://g.co/kgs/Ra5jeo" target="_blank"> Veja mais sobre a série aqui. </a>
                 </p>
               </div>
               <!-- texto do item-->
@@ -223,7 +250,12 @@
 
             <!-- Detalhes do item -->
             <span class="itembox">
-              <img src="" alt="" class="imgGallery" />
+              <div class="imgGallery">
+                <img src="assets/images/O_Segredo_na_Ilha_poster.png" title="O Segredo Na Ilha - Poster (Fonte: Fandom Wiki)" alt="O Segredo Na Ilha - Poster (Fonte: Fandom Wiki)" />
+                <div class="citeFonte">
+                  Fonte da Imagem: <a href="https://ordemparanormal.fandom.com/wiki/O_Segredo_na_Ilha" target="_blank">Fandom Wiki</a>.
+                </div>
+              </div>
               <div class="text2">
                 <h4 class="hobbie-title">O Segredo Na Ilha - RPG</h4>
                 <p>
@@ -232,7 +264,7 @@
                   Paranormal, criado pelo streamer Cellbit. Nesta temporada,
                   iremos desvendar a ilha de Típora, que isolada do continente e
                   da tecnologia esconde vários segredos. <br />
-                  <a href=""> Veja aqui. </a>
+                  <a href="https://ordemparanormal.fandom.com/wiki/O_Segredo_na_Ilha" target="_blank"> Veja aqui. </a>
                 </p>
               </div>
               <!-- texto do item-->
@@ -241,7 +273,14 @@
 
             <!-- Detalhes do item -->
             <span class="itembox">
-              <img src="" alt="" class="imgGallery" />
+              <div class="imgGallery">
+                <img src="assets/images/modelagem-de-asset-ytplaylist.png" title="Blender para iniciantes, Modelagem de Asset - Baú (YouTube
+                Playlist)" alt="Blender para iniciantes, Modelagem de Asset - Baú (YouTube
+                Playlist)" />
+                <div class="citeFonte">
+                  Fonte da Imagem: <a href="https://youtube.com/playlist?list=PL6XYsIKNWlL0Ewv_mCZk1KI8Q-AgvfgoQ" target="_blank">YouTube</a>.
+                </div>
+              </div>
               <div class="text2">
                 <h4 class="hobbie-title">
                   Blender para iniciantes, Modelagem de Asset - Baú (YouTube
@@ -252,7 +291,7 @@
                   modelagens em 3D. Em minhas explorações, este foi um dos
                   tutoriais que segui para fazer a modelagem de um baú. Fica a
                   dica. <br />
-                  <a href=""> Veja aqui. </a>
+                  <a href="https://youtube.com/playlist?list=PL6XYsIKNWlL0Ewv_mCZk1KI8Q-AgvfgoQ" target="_blank"> Veja aqui. </a>
                 </p>
               </div>
               <!-- texto do item-->
@@ -272,7 +311,12 @@
 
             <!-- Detalhes do item -->
             <span class="itembox">
-              <img src="" alt="" class="imgGallery" />
+              <div class="imgGallery">
+                <img src="assets/images/Resident_Evil_4_-_North-american_cover.jpg" title="Resident Evil 4 (North American Cover) - Fonte: Wikipedia" alt="Resident Evil 4 (North American Cover) - Fonte: Wikipedia" />
+                <div class="citeFonte">
+                  Fonte da Imagem: <a href="https://pt.wikipedia.org/wiki/Resident_Evil_4#/media/Ficheiro:Resident_Evil_4_-_North-american_cover.jpg" target="_blank">Wikipedia</a>.
+                </div>
+              </div>
               <div class="text2">
                 <h4 class="hobbie-title">Resident Evil 4</h4>
                 <p>
@@ -282,7 +326,7 @@
                   mas se focar na parte de zumbis, gênero survival horror, ele é
                   um jogo interessante. As campanhas extras da Ada também
                   prolongam positivamente a experiência do jogo. <br />
-                  <a href=""> Veja mais clicando aqui. </a>
+                  <a href="https://g.co/kgs/xxuHQh" target="_blank"> Veja mais clicando aqui. </a>
                 </p>
               </div>
               <!-- texto do item-->
@@ -291,7 +335,12 @@
 
             <!-- Detalhes do item -->
             <span class="itembox">
-              <img src="" alt="" class="imgGallery" />
+              <div class="imgGallery">
+                <img src="assets/images/inscryption-poster.jpg" title="Inscryption - Poster (Fonte: Epic Games)" alt="Inscryption - Poster (Fonte: Epic Games)" />
+                <div class="citeFonte">
+                  Fonte da Imagem: <a href="https://store.epicgames.com/pt-BR/p/inscryption-6b29ab" target="_blank">Epic Games</a>.
+                </div>
+              </div>
               <div class="text2">
                 <h4 class="hobbie-title">Inscryption</h4>
                 <p>
@@ -300,7 +349,7 @@
                   neste jogo é a história e o mistério que começa a se
                   desenrolar à medida que você avança neste jogo. Não é apenas
                   um jogo de cartas. Algo mais obscuro acontece aqui. <br />
-                  <a href=""> Veja mais clicando aqui. </a>
+                  <a href="https://g.co/kgs/KJmWWT" target="_blank"> Veja mais clicando aqui. </a>
                 </p>
               </div>
               <!--  texto do item -->
@@ -308,7 +357,12 @@
             <!-- Fechamento do item -->
 
             <span class="itembox">
-              <img src="" alt="" class="imgGallery" />
+              <div class="imgGallery">
+                <img src="assets/images/five-nights-security-breach-poster.png" title="Five Nights at Freddys -Security Breach - Poster (Fonte: Epic Games)" alt="Five Nights at Freddys -Security Breach - Poster (Fonte: Epic Games)" />
+                <div class="citeFonte">
+                  Fonte da Imagem: <a href="https://store.epicgames.com/pt-BR/p/five-nights-at-freddys-security-breach-8dee2a" target="_blank">Epic Games</a>.
+                </div>
+              </div>
               <div class="text2">
                 <h4 class="hobbie-title">
                   Five Nights at Freddy&apos;s: Security Breach
@@ -322,7 +376,7 @@
                   atemorizava, neste jogo irá nos auxiliar a escapar da
                   pizzaria, em que há animatrônicos e uma segurança cujas
                   intenções não são tão claras. <br />
-                  <a href=""> Veja mais clicando aqui. </a>
+                  <a href="https://g.co/kgs/E3sUjC" target="_blank"> Veja mais clicando aqui. </a>
                 </p>
               </div>
             </span>
@@ -340,7 +394,7 @@
 
             <!-- Detalhes do item -->
             <span class="itembox">
-              <img src="" alt="" class="imgGallery" />
+              <img src="assets/images/website.png" title="This Website" alt="website" class="imgGallery" />
               <div class="text2">
                 <h4 class="hobbie-title">Este site</h4>
                 <p>
@@ -355,7 +409,7 @@
 
             <!-- Detalhes do item -->
             <span class="itembox">
-              <img src="" alt="" class="imgGallery" />
+              <img src="assets/images/more.png" title="Ainda mais" alt="Ainda mais" class="imgGallery" />
               <div class="text2">
                 <h4 class="hobbie-title">Mais por vir</h4>
                 <p>
@@ -410,8 +464,18 @@
 
         <p class="text2 orOther">Ou me encontre através das redes:</p>
         <div class="redes">
-          <div class="rede"></div>
-          <div class="rede"></div>
+          <div class="rede">
+            <a href="https://github.com/Jhonny515" target="_blank">
+              <img src="assets/images/square-github.svg" alt="GitHub">
+              <p class="text2 upfront">GitHub</p>
+            </a>
+          </div>
+          <div class="rede">
+            <a href="https://www.linkedin.com/in/jonatas-nascimento-oliveira-0418bb25a/" target="_blank">
+              <img src="assets/images/linkedin.svg" alt="LinkedIn">
+              <p class="text2 upfront">LinkedIn</p>
+            </a>
+          </div>
         </div>
       </section>
     </div>
